--- a/buildmymusic/templates/events.html
+++ b/buildmymusic/templates/events.html
@@ -12,7 +12,7 @@
   </header>
   <body>
     <h1>
-      <center>Buildmymusic</center>
+      <strong><center>Buildmymusic</center></strong>
     </h1>
     <br>
     <form action = "/search" method = "post">
