--- a/buildmymusic/templates/aboutus.html
+++ b/buildmymusic/templates/aboutus.html
@@ -15,7 +15,7 @@
 
 
     <h1>
-      <center>Buildmymusic</center>
+      <strong><center>Buildmymusic</center></strong>
     </h1>
     <br>
     <form action = "/search" method = "post">
@@ -31,6 +31,7 @@
     <div class = "centerbox">
         <center>
           <strong><h2> About the Creators </h2></strong>
+          <img src = "https://media.licdn.com/media/p/3/005/069/2c3/110bcf9.jpg"
         </center>
         <br>
     </div>
