--- a/buildmymusic/stylesheets/profile.css
+++ b/buildmymusic/stylesheets/profile.css
@@ -1,8 +1,8 @@
 body {
   font-family: 'Montserrat', sans-serif;
   background-size: cover;
-  background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/2a/Chicago_-_Night.jpg");
-  
+  background-image: url("http://www.freewallpaperfullhd.com/wp-content/uploads/2015/03/wallpapers/ocean_background_3-wallpaper-1920x1200.jpg");
+
   background-color: #cccccc;
   color: Pink;
 }
@@ -16,6 +16,9 @@ body {
   margin: 0 auto;
 }
 h1 {
+  position: absolute;
+  left: 0px;
+  top: 40px;
   color: white;
   /*background-color: #F0FFFF;*/
 }
@@ -23,7 +26,10 @@ h1 {
 h2 {
   color: orange;
   /*background-color: #F0FFFF;*/
-  top: 50px;
+  position: absolute;
+  left: 15px;
+  top: 350px;
+  color: white;
 }
 
 
@@ -59,4 +65,30 @@ div {
     left: 0px;
     top: 40px;
 }
+#generic-image{
+    position: absolute;
+    left: 0px;
+    top: 100px;
+    color: blue;
+}
+
+#clickme{
+    position: absolute;
+    left: 210px;
+    top: 325px;
+}
+#buttons{
+  position: absolute;
+  left: 900px;
+  top: 100px;
+  color: blue;
+}
+#textbox{
+  position: absolute;
+  left: 900px;
+  top: 420px;
+  color: blue;
+
+}
+
 input[type=file] { width: 1px; }
