--- a/buildmymusic/templates/likes.html
+++ b/buildmymusic/templates/likes.html
@@ -42,7 +42,7 @@
 
     <div class = "buttons">
       <form action = "/otherdefault" method = "get">
-        <input type="image" src="http://searchengineland.com/figz/wp-content/seloads/2013/03/logo_512-300x300.png" height = "80" width = "80" name="Like" id="gohome" />
+        <input type="image" src="http://www.userlogos.org/files/logos/sjdvda/musicblack.png" height = "100" width = "100" name="Like" id="gohome" />
       </form>
       <br>
       <form action = "/profile" method = "get">
