--- a/buildmymusic/templates/aboutus.html
+++ b/buildmymusic/templates/aboutus.html
@@ -12,16 +12,6 @@
 
   </header>
   <body>
-    
-    <strong>About us</strong>
-    <h1>About us</h1>
-    <img height="240" src="">
-    <p></p>
-    <h2></h2>
-    <!--this is the first paragraph <br>
-    <p>second paragraph</b>
-    <!-- this is a comment -->
-
     <h1>
       <strong><center>Buildmymusic</center></strong>
     </h1>
@@ -29,6 +19,7 @@
     <form action = "/search" method = "post">
       <div id = "searching">
       <center><input type = "text" id = "searchbar" style = "width: 500px; height: 30px"/>
+      <input type="image" src="http://www.clker.com/cliparts/Y/x/X/j/U/f/search-button-without-text-md.png" height = "30" width = "30" name="searchbutton" id = "search"></center>
       <!-- <input type="submit" value="search"></center> -->
       </div>
     </form>
@@ -36,16 +27,22 @@
     <br>
     <br>
     <div class = "centerbox">
-        <center>
-          <strong><h2> About the Creators </h2></strong>
-          <img src = "https://media.licdn.com/media/p/3/005/069/2c3/110bcf9.jpg"
-        </center>
+        <center><strong><h2 id = "aboutustitle"> About the Creators </h2></strong></center>
+        <h4 id = "christinetitle">Christine Hicaro:</h4>
+        <h5 id = 'christinesinfo'>
+          Christine was born and raised in La Grange, a suburb of Chicago. She will attend on Iowa State University on full scholarship as a Software Engineering Major in the fall (of 2015). For Buildmymusic, she primarily worked on the front-end and gained a lot of experience with HTML and CSS.
+        </h5>
+        Liam McDonald
+        <br>
+        Shaun Willis
+        <br>
+        <img src = "https://media.licdn.com/media/p/3/005/069/2c3/110bcf9.jpg">
         <br>
     </div>
 
     <div class = "buttons">
       <form action = "/otherdefault" method = "get">
-        <input type="image" src="http://searchengineland.com/figz/wp-content/seloads/2013/03/logo_512-300x300.png" height = "80" width = "80" name="Like" id="gohome" />
+        <input type="image" src="http://www.userlogos.org/files/logos/sjdvda/musicblack.png" height = "100" width = "100" name="Like" id="gohome" />
       </form>
       <br>
       <form action = "/profile" method = "get">
