--- a/buildmymusic/templates/search.html
+++ b/buildmymusic/templates/search.html
@@ -28,6 +28,7 @@
 
       {% for i in searches %}
       <div id = "results{{loop.index}}">
+        <div id = "results">
         <strong>Song:</strong>
         <span class="song">{{i.title}}</span><br>
         <strong>Artist:</strong>
@@ -35,6 +36,7 @@
         <strong>Album:</strong>
         <span class="album">{{i.album}}</span><br>
         <input type="image" src="http://www.clker.com/cliparts/l/M/g/8/7/T/black-and-white-thumbs-up-md.png" height = "35" width = "35" name="Like" class="like" />
+        <br>
         <!-- <audio src="https://mp3skull.cr/mp3/lean_on.html"controls>
         	<embed
         		width="300"
@@ -42,15 +44,17 @@
         		loop="false"
         		autostart="false">
         </audio> -->
-        <iframe width="30" height="30" src="https://www.youtube.com/embed/dqt8Z1k0oWQ?autoplay=0">
-        </iframe>
+        Listen to {{i.title}} on <a target = "_blank" href = "http://youtube.com"> YouTube </a>
+        <br>
+        <br>
+        </div>
       </div>
       {% endfor %}
 
     </div>
     <div class = "buttons">
       <form action = "/otherdefault" method = "get">
-        <input type="image" src="http://searchengineland.com/figz/wp-content/seloads/2013/03/logo_512-300x300.png" height = "80" width = "80" name="Like" id="gohome" />
+        <input type="image" src="http://www.userlogos.org/files/logos/sjdvda/musicblack.png" height = "100" width = "100" name="Like" id="gohome" />
       </form>
       <br>
       <form action = "/profile" method = "get">
