--- a/buildmymusic/templates/default.html
+++ b/buildmymusic/templates/default.html
@@ -27,11 +27,11 @@
     <br>
     <div class = "centerbox">
 
-      <!-- {% for i in searches %}
+      {% for i in suggestions %}
       <div id = "results{{loop.index}}">
         <strong>Song:</strong> {{i.title}}<br> <strong>Artist:</strong> {{i.artist}} <br><strong>Album:</strong> {{i.album}}<br> <input type="image" src="http://www.clker.com/cliparts/l/M/g/8/7/T/black-and-white-thumbs-up-md.png" height = "35" width = "35" name="Like" class="like" />
       </div>
-      {% endfor %} -->
+      {% endfor %}
 
     </div>
     <div class = "buttons">
