--- a/buildmymusic/templates/aboutus.html
+++ b/buildmymusic/templates/aboutus.html
@@ -12,19 +12,6 @@
 
   </header>
   <body>
-<<<<<<< HEAD
-
-    <strong>About us</strong>
-    <h1>About us</h1>
-    <img height="240" src="">
-    <p></p>
-    <h2></h2>
-    <!--this is the first paragraph <br>
-    <p>second paragraph</b>
-    <!-- this is a comment -->
-
-=======
->>>>>>> 8bcfc410cd66de35c11429fd339b1a4634d926a6
     <h1>
       <strong><center>Buildmymusic</center></strong>
     </h1>
@@ -40,11 +27,11 @@
     <br>
     <br>
     <div class = "centerbox">
-        <center><strong><h2 id = "aboutustitle"> About the Creators </h2></strong></center>
-        <h4 id = "christinetitle">Christine Hicaro:</h4>
-        <h5 id = 'christinesinfo'>
+        <center><strong><h3 id = "aboutustitle"> About the Creators </h3></strong></center>
+        <h5 id = "christinesinfo"><strong>Christine Hicaro</strong>:
           Christine was born and raised in La Grange, a suburb of Chicago. She will attend on Iowa State University on full scholarship as a Software Engineering Major in the fall (of 2015). For Buildmymusic, she primarily worked on the front-end and gained a lot of experience with HTML and CSS.
         </h5>
+        <img id = "christinespic" src = "https://scontent-sea1-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/11745645_866416190062090_3198823141425594999_n.jpg?oh=cdd3dd024803db7b84772a9260752d99&oe=563583F6" height = "150" width = "110">
         Liam McDonald
         <br>
         Shaun Willis
@@ -71,9 +58,9 @@
         <input type = "submit" id = "aboutus" value = "About Us">
       </form>
     </div>
-    <div id = "logout">
-      <h2>Log Out</h2>
-    </div>
+    <form action = "/logout" method = "post">
+      <input type = "submit" id = "aboutus" value = "About Us">
+    </form>
 
     <img id = "musicnote" src = "http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/black-paint-splatter-icons-media/001603-black-paint-splatter-icon-media-music-eighth-notes.png" height = "500" width = "500">
 
