--- a/buildmymusic/templates/likes.html
+++ b/buildmymusic/templates/likes.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class = "buttons">
-      <form action = "/otherdefault" method = "get">
+      <form action = "/default" method = "post">
         <input type="image" src="http://www.userlogos.org/files/logos/sjdvda/musicblack.png" height = "100" width = "100" name="Like" id="gohome" />
       </form>
       <br>
