--- a/buildmymusic/templates/profile.html
+++ b/buildmymusic/templates/profile.html
@@ -26,10 +26,10 @@ div {
     <input type="button" id="clickme" value="Upload Photo!" /> -->
     <!-- <p>Welcome Build my Music where you get the playlist that you want and the songs you want to hear</p> -->
     <h2>Likes</h2>
-    
 
 
-    <form action = "/otherdefault" method = "get">
+
+    <form action = "/default" method = "post">
       <input id="sun" type="image" src="http://searchengineland.com/figz/wp-content/seloads/2013/03/logo_512-300x300.png" height = "80" width = "80" id="gohome" />
     </form>
     <br>
