--- a/buildmymusic/stylesheets/profile.css
+++ b/buildmymusic/stylesheets/profile.css
@@ -96,13 +96,14 @@ strong{
   color: blue;
 
 }
+
+
 #sun{
     position: absolute;
     left: 1100px;
     top: 0px
 
 }
-
 #profile{
     position: absolute;
     left: 1105px;
@@ -126,12 +127,32 @@ strong{
     left: 1105px;
     top: 145px;
 }
-/*#profile-div{
-    position: relative;
+h3{
+    position: absolute;
+    left:900px;
+    top: 360px;
+    color: white;
+
+}
+#like{
+  background-color: lightgrey;
+  width: 450px;
+  padding: 25px;
+  border: 5px solid navy;
+  margin: 5px;
+  height: 420px;
+  left: 900px;
+  overflow: scroll;
 }
 
-#form1{
-  z-index: 2;
-}*/
+#what{
+  background-color: lightgrey;
+  width: 800px;
+  padding: 25px;
+  border: 5px solid navy;
+  margin: 5px;
+  height: 400px;
+  overflow: scroll;
+}
 
 input[type=file] { width: 1px; }
