--- a/buildmymusic/templates/aboutus.html
+++ b/buildmymusic/templates/aboutus.html
@@ -32,11 +32,14 @@
           Christine was born and raised in La Grange, a suburb of Chicago. She will attend on Iowa State University on full scholarship as a Software Engineering Major in the fall (of 2015). For Buildmymusic, she primarily worked on the front-end and gained a lot of experience with HTML and CSS.
         </h5>
         <img id = "christinespic" src = "https://scontent-sea1-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/11745645_866416190062090_3198823141425594999_n.jpg?oh=cdd3dd024803db7b84772a9260752d99&oe=563583F6" height = "150" width = "110">
-        Liam McDonald
+        <h5 id = "christinesinfo"><strong>Liam McDonald</strong>:
+          Liam was born in Evanston, Illinois and raised on the north side of Chicago. He went to Whitney Young and graduated in June of 2015. He will be attending Indiana University in the fall, double majoring in Finance and Computer Science. For this project, he primarily worked on the back end python code.
+        </h5>
+        <img id = "liamspic" src = "https://scontent-sea1-1.xx.fbcdn.net/hphotos-xft1/t31.0-8/10505038_816682018364784_7788943990436038507_o.jpg" height = "150" width = "110">
         <br>
         Shaun Willis
         <br>
-        <img src = "https://media.licdn.com/media/p/3/005/069/2c3/110bcf9.jpg">
+        <img id = 'shaunpic' src = "https://media.licdn.com/media/p/3/005/069/2c3/110bcf9.jpg">
         <br>
     </div>
 
