put in references and logout buttons

--- a/buildmymusic/templates/aboutus.html
+++ b/buildmymusic/templates/aboutus.html
@@ -29,7 +29,7 @@
     <div class = "centerbox">
         <center><strong><h3 id = "aboutustitle"> About the Creators </h3></strong></center>
         <h5 id = "christinesinfo"><strong>Christine Hicaro</strong>:
-          Christine was born and raised in La Grange, a suburb of Chicago. She will attend on Iowa State University on full scholarship as a Software Engineering Major in the fall (of 2015). For Buildmymusic, she primarily worked on the front-end and gained a lot of experience with HTML and CSS.
+          Christine was born and raised in La Grange, a suburb of Chicago. She will attend Iowa State University on full scholarship as a Software Engineering Major in the fall (of 2015). For Buildmymusic, she primarily worked on the front-end and gained a lot of experience with HTML and CSS.
         </h5>
         <img id = "christinespic" src = "https://scontent-sea1-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/11745645_866416190062090_3198823141425594999_n.jpg?oh=cdd3dd024803db7b84772a9260752d99&oe=563583F6" height = "150" width = "110">
         Liam McDonald
@@ -41,7 +41,7 @@
     </div>
 
     <div class = "buttons">
-      <form action = "/otherdefault" method = "get">
+      <form action = "/default" method = "post">
         <input type="image" src="http://www.userlogos.org/files/logos/sjdvda/musicblack.png" height = "100" width = "100" name="Like" id="gohome" />
       </form>
       <br>
@@ -57,7 +57,11 @@
       <form action = "/aboutus" method = "get">
         <input type = "submit" id = "aboutus" value = "About Us">
       </form>
+      <form action = "/references" method = "get">
+        <input type = "submit" id = "references" value = "References">
+      </form>
     </div>
+    
     <form action = "/logout" method = "post">
       <input type = "submit" id = "aboutus" value = "About Us">
     </form>
