--- a/buildmymusic/templates/events.html
+++ b/buildmymusic/templates/events.html
@@ -49,10 +49,14 @@
       <form action = "/aboutus" method = "get">
         <input type = "submit" id = "aboutus" value = "About Us">
       </form>
+      <form action = "/references" method = "get">
+        <input type = "submit" id = "references" value = "References">
+      </form>
     </div>
-    <div id = "logout">
-      <h2>Log Out</h2>
-    </div>
+    
+    <form action = "/logout" method = "post">
+      <input type = "submit" id = "logout" value = "Log Out">
+    </form>
 
     <img id = "musicnote" src = "http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/black-paint-splatter-icons-media/001603-black-paint-splatter-icon-media-music-eighth-notes.png" height = "500" width = "500">
 
