--- a/buildmymusic/stylesheets/default.css
+++ b/buildmymusic/stylesheets/default.css
@@ -98,7 +98,7 @@ h1{
             top:275px;
             height: 60px;
             width: 230px;
-            opacity:0.7;
+            opacity:0.6;
             filter:alpha(opacity=60);
          }
 
@@ -154,19 +154,57 @@ h1{
             opacity:0.6;
             filter:alpha(opacity=60);
           }
+#references {
+/*position: fixed;*/
+            font-family: "Sigmar One";
+            color: black;
+            font-size: 20px;
+            border-radius: px;
+            background: white;
+            padding: 10px 20px 10px 20px;
+            text-decoration: none;
+            left:90px;
+            top:455px;
+            height: 60px;
+            width: 230px;
+            opacity:0.6;
+            filter:alpha(opacity=60);
+          }
 
+
+#logout {
+/*position: fixed;*/
+            -webkit-border-radius: 28;
+            -moz-border-radius: 28;
+            border-radius: 28px;
+            font-family: "Sigmar One";
+            color: black;
+            font-size: 20px;
+            background-color: white;
+            padding: 10px 20px 10px 20px;
+            text-decoration: none;
+            float:right;
+            clear:both;
+            height: 60px;
+            width: 230px;
+            opacity:0.6;
+            position:relative;
+            top: -1150px;
+            left: 100px;
+            filter:alpha(opacity=60);
+          }
 
 #thumbsuplike {
                 border: 1px solid black;
               }
 
-#logout{
+/*#logout{
           position: relative;
           left:180px;
           top: -750px;
           font-family: "Yanone Kaffeesatz";
           color: white;
-       }
+       }*/
 
 #gohome{
          position: relative;
