--- a/buildmymusic/templates/references.html
+++ b/buildmymusic/templates/references.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <header>
@@ -7,7 +6,7 @@
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="jquery.watermarkinput.js" type="text/javascript"></script>
+    <!-- <script src="jquery.watermarkinput.js" type="text/javascript"></script> -->
     <script src="scripts/default.js"></script>
 
   </header>
@@ -18,31 +17,18 @@
     <br>
     <form action = "/search" method = "post">
       <div id = "searching">
-      <center><input type = "text" id = "searchbar" style = "width: 500px; height: 30px"/>
-      <input type="image" src="http://www.clker.com/cliparts/Y/x/X/j/U/f/search-button-without-text-md.png" height = "30" width = "30" name="searchbutton" id = "search"></center>
+      <center><input type = "text" id = "searchbar" name = "search" style = "width: 500px; height: 30px"/>
       <!-- <input type="submit" value="search"></center> -->
+      <input type="image" src="http://www.clker.com/cliparts/Y/x/X/j/U/f/search-button-without-text-md.png" height = "30" width = "30" name="searchbutton" id = "search"></center>
       </div>
     </form>
-
     <br>
     <br>
     <div class = "centerbox">
-        <center><strong><h3 id = "aboutustitle"> About the Creators </h3></strong></center>
-        <h5 id = "christinesinfo"><strong>Christine Hicaro</strong>:
-          Christine was born and raised in La Grange, a suburb of Chicago. She will attend Iowa State University on full scholarship as a Software Engineering Major in the fall (of 2015). For Buildmymusic, she primarily worked on the front-end and gained a lot of experience with HTML and CSS.
-        </h5>
-        <img id = "christinespic" src = "https://scontent-sea1-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/11745645_866416190062090_3198823141425594999_n.jpg?oh=cdd3dd024803db7b84772a9260752d99&oe=563583F6" height = "150" width = "110">
-        <div id = "liamsblock"><h5 id = "liamsinfo"><strong>Liam McDonald</strong>:
-          Liam was born in Evanston, Illinois and raised on the north side of Chicago. He went to Whitney Young and graduated in June of 2015. He will be attending Indiana University in the fall, double majoring in Finance and Computer Science. For this project, he primarily worked on the back end python code.
-        </h5></div>
-        <img id = "liamspic" src = "https://scontent-sea1-1.xx.fbcdn.net/hphotos-xft1/t31.0-8/10505038_816682018364784_7788943990436038507_o.jpg" height = "170" width = "130">
-        <br>
-        Shaun Willis
-        <br>
-        <img id = 'shaunpic' src = "https://media.licdn.com/media/p/3/005/069/2c3/110bcf9.jpg">
-        <br>
-    </div>
+      <h1 id = "referencetitle">References</h1>
 
+
+    </div>
     <div class = "buttons">
       <form action = "/default" method = "post">
         <input type="image" src="http://www.userlogos.org/files/logos/sjdvda/musicblack.png" height = "100" width = "100" name="Like" id="gohome" />
