--- a/buildmymusic/templates/profile.html
+++ b/buildmymusic/templates/profile.html
@@ -13,7 +13,7 @@
   <body>
     <strong>BUILD MY MUSIC</strong>
     <h1>My Profile {{nickname}}</h1>
-    <div id= "What">
+    <div id= "what">
       <div id = "likedmusic"> <h1> Your liked music! </h1></div>
       <br>
       <br>
