--- a/buildmymusic/stylesheets/profile.css
+++ b/buildmymusic/stylesheets/profile.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Montserrat', sans-serif;
   background-size: cover;
-  background-image: url("http://www.freewallpaperfullhd.com/wp-content/uploads/2015/03/wallpapers/ocean_background_3-wallpaper-1920x1200.jpg");
+  background-image: url("http://www.freelargeimages.com/wp-content/uploads/2014/12/Cool_background-7.jpg");
 
   background-color: #cccccc;
   color: Pink;
@@ -19,7 +19,7 @@ h1 {
   position: absolute;
   left: 0px;
   top: 40px;
-  color: white;
+  color: blue;
   /*background-color: #F0FFFF;*/
 }
 
@@ -78,7 +78,7 @@ div {
     top: 325px;
 }
 
-strong{
+#head1{
     font-family: Impact, Charcoal, sans-serif;
     font-size: 45px;
 }
