made changes to aboutus

--- a/buildmymusic/stylesheets/default.css
+++ b/buildmymusic/stylesheets/default.css
@@ -236,3 +236,9 @@ input.watermark {color: black; }
 #liamspic{position:relative;
           top: -130px;
           left: 610px;}
+
+#shaunsinfo{height: 100px;
+          width: 550px;
+          position:relative;
+          left: 250px;
+          top:-90px;}
