--- a/buildmymusic/templates/aboutus.html
+++ b/buildmymusic/templates/aboutus.html
@@ -42,7 +42,7 @@
         <h5 id = "shaunsinfo"><strong>Shaun Willis</strong>:
           Shaun Willis was born in Chicago and raised on the west side of the city. He went to King and Devry Advantage Academy, and graduated there in June, 2015 with an associates degree. He will be attending Hanover college in the fall on a full tuition scholarship. On this project, Shaun worked mostly with HTML and CSS.
         </h5>
-        <img id = 'shaunpic' src = "https://media.licdn.com/media/p/3/005/069/2c3/110bcf9.jpg">
+        <img id = 'shaunspic' src = "https://media.licdn.com/media/p/3/005/069/2c3/110bcf9.jpg">
         <br>
     </div>
 
