--- a/buildmymusic/templates/references.html
+++ b/buildmymusic/templates/references.html
@@ -25,7 +25,20 @@
     <br>
     <br>
     <div class = "centerbox">
-      <h1 id = "referencetitle">References</h1>
+      <center><h2 id = "referencestart"> This app was made possible by:</h2></center>
+      <br>
+      <center><div id = "logos">
+        <br>
+        <img src = "http://www.hypebot.com/.a/6a00d83451b36c69e201a3fb06a214970b-800wi" height = "100" width = "200"> <a href = "https://www.bandsintown.com/api/overview" target = "_blank"> Bandsintown API </a>
+        <br>
+        <br>
+        <img src = "http://ih.constantcontact.com/fs062/1102433540391/img/136.jpg" height = "100" width = "200"> <a href = "https://www.apple.com/itunes/affiliates/resources/documentation/itunes-store-web-service-search-api.html" target = "_blank"> iTunes API </a>
+        <br>
+        <br>
+        <img src = "http://www.hilyts.com/wp-content/uploads/2015/08/Google-Logo.png" height = "125" width = "200"> <a href = "https://cloud.google.com/appengine/docs" target = "_blank"> GoogleUsers API </a>
+      </div></center>
+    </div>
+
 
 
     </div>
