--- a/buildmymusic/templates/welcome.html
+++ b/buildmymusic/templates/welcome.html
@@ -15,7 +15,7 @@
       </h1>
     </div>
     <div class = 'myButton'>
-      <form action = "/default" method="post">
+      <form action = "/" method="post">
         <input type="submit" value='Login'<a href="#" class="myButton"></a>
       </form>
     </div>
